@@ -992,3 +992,22 @@ class TestImageFunctions(PyfitsTestCase):
 
         with pyfits.open(self.temp('test.fits')) as h:
             assert_true((noise == h[1].data).all())
+
+    def test_compression_column_tforms(self):
+        """Regression test for #199."""
+
+        # Some interestingly tiled data so that some of it is quantized and
+        # some of it ends up just getting gzip-compressed
+        data2 = ((np.arange(1, 8, dtype=np.float32) * 10)[:, np.newaxis] +
+                np.arange(1, 7))
+        np.random.seed(0xDEADBEEF)
+        data1 = np.random.uniform(size=(6 * 4, 7 * 4))
+        data1[:data2.shape[0], :data2.shape[1]] = data2
+        chdu = pyfits.CompImageHDU(data1, compressionType='RICE_1',
+                                   tileSize=(6, 7))
+        chdu.writeto(self.temp('test.fits'))
+
+        with pyfits.open(self.temp('test.fits'),
+                         disable_image_compression=True) as h:
+            assert_equal(h[1].header['TFORM1'], '1PB(32)')
+            assert_equal(h[1].header['TFORM2'], '1PB(359)')
